<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.neighbour_list.ActivityProfileNeighbours">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_arrow_white_24dp"
        app:layout_constraintBottom_toTopOf="@+id/neighbour_name"
        app:layout_constraintStart_toStartOf="@+id/neighbour_picture"
        app:layout_constraintTop_toTopOf="@id/back_button" />

    <ImageView
        android:id="@+id/neighbour_picture"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:adjustViewBounds="true"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/ColorBlack" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_Favorites"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="10dp"
        android:backgroundTintMode="@color/colorWhite"
        android:src="@drawable/ic_star_empty_yellow_24dp"

        app:layout_constraintBottom_toBottomOf="@id/neighbour_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/neighbour_picture" />

    <TextView
        android:id="@+id/neighbour_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/neighbour_picture"
        app:layout_constraintStart_toStartOf="@id/neighbour_picture"
        tools:text="neighbourName" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_info"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neighbour_picture">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textView_neighbour_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/ColorBlack"
            android:textSize="25sp"
            tools:text="neighbourName"
            />

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/ic_place_black_24dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_location_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="70dp"
            android:textSize="15sp" />

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="120dp"
            android:src="@drawable/ic_call_black_24dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_mobile_number_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="120dp"
            android:textSize="15sp" />

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="170dp"
            android:src="@drawable/ic_language_black_24dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_webSite_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="170dp"
            android:textSize="15sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_a_propos"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_info">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/a_propos_de_moi"
            android:textColor="@color/ColorBlack"
            android:textSize="25sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:layout_marginTop="60dp"
            android:scrollbars="none">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_view_about_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp"
                tools:text="Bonjour ! Je souhaiterais faire de la marche nordique. Pas initiée, je recherche une ou plusieurs personnes susceptibles de
                m'accompagner !J'aime les jeux de cartes tels la belote et le tarot.."
                />
        </ScrollView>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>