package com.openclassrooms.entrevoisins.neighbour_list;

import android.support.test.espresso.matcher.ViewMatchers;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;

import com.openclassrooms.entrevoisins.R;
import com.openclassrooms.entrevoisins.ui.neighbour_list.ListNeighbourActivity;
import com.openclassrooms.entrevoisins.utils.DeleteViewAction;

import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition;
import static android.support.test.espresso.matcher.ViewMatchers.assertThat;
import static android.support.test.espresso.matcher.ViewMatchers.hasChildCount;
import static android.support.test.espresso.matcher.ViewMatchers.hasMinimumChildCount;

import static android.support.test.espresso.matcher.ViewMatchers.isCompletelyDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withContentDescription;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static com.openclassrooms.entrevoisins.utils.RecyclerViewItemCountAssertion.withItemCount;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.core.IsNull.notNullValue;

/**
 * Test class for list of neighbours
 */
@RunWith(AndroidJUnit4.class)
public class NeighboursListTest {

    // This is fixed
    private static int ITEMS_COUNT = 12;

    private ListNeighbourActivity mActivity;

    @Rule
    public ActivityTestRule<ListNeighbourActivity> mActivityRule =
            new ActivityTestRule(ListNeighbourActivity.class);

    @Before
    public void setUp() {
        mActivity = mActivityRule.getActivity();
        assertThat(mActivity, notNullValue());
    }

    /**
     * We ensure that our recyclerview is displaying at least on item
     */
    @Test
    public void myNeighboursList_shouldNotBeEmpty() {
        // First scroll to the position that needs to be matched and click on it.
        onView(allOf(ViewMatchers.withId(R.id.list_neighbours), isDisplayed()))
                .check(matches(hasMinimumChildCount(1)));
    }

    /**
     * When we click on item, the activity displayed is Activity_neighbours_profile
     */
    @Test
    public void myActivityIsProfileNeighbours() {

        onView(allOf(ViewMatchers.withId(R.id.list_neighbours), isDisplayed())).
                perform(actionOnItemAtPosition(1, click()));

        onView(ViewMatchers.withId(R.id.neighbour_picture)).check(matches(isDisplayed()));
    }

    /**
     * We click on item, and we check if neighbour_name notEmpty and is correct
     */
    @Test
    public void myNeighboursNameIsNotEmpty() {
        onView(allOf(ViewMatchers.withId(R.id.list_neighbours), isDisplayed())).perform(actionOnItemAtPosition(0, click()));

        onView(ViewMatchers.withId(R.id.neighbour_name)).
                check(matches(withText("Caroline")));
    }

    @Test
    public void neighboursInFavoritesListIsOnlyFavoritesNeighbours() {
        onView(allOf(ViewMatchers.withId(R.id.list_neighbours), isDisplayed())).perform(actionOnItemAtPosition(0, click()));

        onView(ViewMatchers.withId(R.id.button_Favorites)).perform(click());

        onView(ViewMatchers.withId(R.id.back_button)).perform(click());

        onView(allOf(withContentDescription("Favorites"), isDisplayed())).perform(click());

        onView(ViewMatchers.withId(R.id.main_content)).check(matches(isDisplayed()));

        onView(ViewMatchers.withId(R.id.main_content)).check(matches(isCompletelyDisplayed()));

        onView(allOf(ViewMatchers.withId(R.id.list_neighbours), isDisplayed())).check(matches(hasChildCount(1)));

        onView(allOf(ViewMatchers.withId(R.id.list_neighbours), isDisplayed())).
                perform(actionOnItemAtPosition(0, click()));

        onView(ViewMatchers.withId(R.id.button_Favorites)).perform(click());

        onView(ViewMatchers.withId(R.id.back_button)).perform(click());

        onView(allOf(withContentDescription("Favorites"), isDisplayed())).perform(click());

        onView(ViewMatchers.withId(R.id.main_content)).check(matches(isDisplayed()));

        onView(ViewMatchers.withId(R.id.main_content)).check(matches(isCompletelyDisplayed()));

        onView(allOf(ViewMatchers.withId(R.id.list_neighbours), isDisplayed())).check(matches(hasChildCount(0)));


    }

    /**
     * When we delete an item, the item is no more shown
     */
    @Test
    public void myNeighboursList_deleteAction_shouldRemoveItem() {
        // Given : We remove the element at position 2
        onView(allOf(ViewMatchers.withId(R.id.list_neighbours), isDisplayed())).check(withItemCount(ITEMS_COUNT));
        // When perform a click on a delete icon
        onView(allOf(ViewMatchers.withId(R.id.list_neighbours), isDisplayed()))
                .perform(actionOnItemAtPosition(1, new DeleteViewAction()));
        // Then : the number of element is 11
        onView(allOf(ViewMatchers.withId(R.id.list_neighbours), isDisplayed())).check(withItemCount(ITEMS_COUNT - 1));
    }
}